--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://jcreations.1000dtechnology.com/api
-VITE_STORAGE_URL=https://api.beautifulislandtours.lk/storage
+VITE_STORAGE_URL=https://jcreations.1000dtechnology.com/storage
