Refactor Cart component to integrate delivery info and payment method selection; implement Payhere SDK for online payments and enhance error handling.

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VITE_API_URL=https://jcreations.1000dtechnology.com/api
 VITE_STORAGE_URL=https://jcreations.1000dtechnology.com/storage
+
+VITE_PAYHERE_MERCHANT_ID=1221046
+VITE_PAYHERE_MODE=true
+VITE_PAYHERE_NOTIFY_URL=https://jcreations.1000dtechnology.com/api/payhere/notify
