--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_STORAGE_URL=https://jcreations.1000dtechnology.com/storage
 VITE_PAYHERE_MERCHANT_ID=1221046
 VITE_PAYHERE_MODE=true
 VITE_PAYHERE_NOTIFY_URL=https://jcreations.1000dtechnology.com/api/payhere/notify
+
+VITE_MAIL_API_KEY=7347828193
