--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
+    "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
     "motion": "^12.6.3",
     "react": "^19.0.0",
